# endeavor

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  TODO.md
.claude/: settings.local.json
config/: createdieselgenerators-server.toml  structurify.json
config/kubejs/server_scripts/: disable_curing_and_beds.js
config/ore_veines/: ore_veins_overrides.json
datapack-rules/zzz_endeavour_rules/: pack.mcmeta
datapack-worldgen/prototype-toroidal-noise/: README.md
datapack-worldgen/prototype-worldgen/: README.md  pack.mcmeta
datapack-worldgen/test-vanilla-restrictions/: README.md  pack.mcmeta
datapack-worldgen/zzz_endeavour_worldgen/: README.md  pack.mcmeta
design/: density-function-research.md  design-doc.md  journal.md  mod-list.md  open-questions.md  ore-tool-handoff.md  tier-map.xlsx
mod/: build.gradle  gradle.properties  settings.gradle
prototype-toroidal-noise/: README.md  pack.mcmeta
prototype-worldgen/: README.md
tools/: gen_tribute_altar_texture.py  rezip_datapacks.py
tools/ore-tier-manager/: README.md  apply.py  common.py  extract.py  gui.py  pyproject.toml  tier_caves.py  validate.py
tools/structure-manager/: .scan_cache.json  app.py  assets.py  config_manager.py  datapack_overrides.json  entities.py  jigsaw_sim.py  pyproject.toml  run.bat  scanner.py  strip_structure_voids.py
tools/structure-manager/cache/: block_textures.json  uvmap.json
tools/structure-manager/frontend/: app.js  index.html  style.css  viewer.js
tools/structure-manager/structure_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1053 files in other folders)
