[project]
name = "structure-manager"
version = "0.1.0"
description = "Browse, visualise and toggle Minecraft structure spawning for Endeavour."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "nbtlib>=2.0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
